[refactor] Redesign work section

--- a/work.html
+++ b/work.html
@@ -45,45 +45,114 @@
       </div>
     </div>
     <div class="container work-container">
-      <div class="projects">
-        <div>
-          Full stack web development
-          <br/>
-          Specialising in back-end
-          <br/>
+      <div class="work">
+        <div class="girl">
+          <img alt="techie" src="images/techie.png">
+          <img alt="waver" src="images/waver.png" class="d-none">
         </div>
-        <hr class="pink-hr">
-        <div class="project-webpages">
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="AdPlan"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1556574435/shirleydeng/adplan-webpage.png" alt="AdPlan">
-            <div class="project-name">AdPlan (WIP)</div>
+        <hr class="pink-hr mt-0">
+        <div class="work-heading mt-3">Been in the game for</div>
+        <div class="counter-time"><span class='loading-text'>Wait for it..</span></div>
+        <div class="row my-5">
+          <div class="col-md-6 mb-5">
+            <div class="work-heading">9 to 5</div>
+            <div class="row experience">
+              <div class="col-3">
+                '19
+              </div>
+              <div class="col-9 mb-3">
+                <a href="https://lavanda.co.uk" target="_blank">Lavanda</a>
+                <div class="description">Full Stack Developer</div>
+                <div class="stack">
+                  <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
+                  <img alt="Ionic" src="images/ionic-icon.png">
+                </div>
+              </div>
+              <div class="col-3">
+                '18 - '19
+              </div>
+              <div class="col-9 mb-3">
+                <a href="https://purrgroup.com/digital" target="_blank">Purr Digital</a>
+                <div class="description">Full Stack Developer</div>
+                <div class="stack">
+                  <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
+                  <img alt="React" src="images/react-icon.png">
+                  <img alt="jQuery" src="images/jquery-icon.png">
+                </div>
+              </div>
+              <div class="col-3">
+                '18
+              </div>
+              <div class="col-9 mb-3">
+                <a href="https://www.fastgardener.com/" target="_blank">Fast Gardener</a>
+                <div class="description">Front End Developer</div>
+                <div class="stack">
+                  <img alt="jQuery" src="images/jquery-icon.png">
+                </div>
+              </div>
+              <div class="col-3">
+                '18
+              </div>
+              <div class="col-9">
+                  <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a>
+                <div class="description">Coding Bootcamp Graduate</div>
+                <div class="stack">
+                  <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
+                  <img alt="JavaScript" src="images/javascript-icon.png">
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="Endo"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1556642165/shirleydeng/endo-webpage.png" alt="Mobile App">
-            <div class="project-name">Endo at<br/>the Rotunda</div>
+          <div class="col-md-6 text-left">
+            <div class="work-heading">Tech Stack</div>
+            <div class="tech-stack">
+              <div>Back End</div>
+              <div class="mb-3">
+                <span class="mr-3">Ruby on Rails</span>
+                <span class="mr-3">SQL</span>
+                <span>PostgreSQL</span>
+              </div>
+              <div>Front End</div>
+              <div class="mb-3">
+                <span class="mr-3">Angular</span>
+                <span class="mr-3">Ionic</span>
+                <span class="mr-3">React</span>
+                <span class="mr-3">React Native</span>
+                <span class="mr-3">jQuery</span>
+                <span class="mr-3">JavaScript</span>
+                <span class="mr-3">CoffeeScript</span>
+                <span class="mr-3">HTML5</span>
+                <span class="mr-3">Haml</span>
+                <span class="mr-3">CSS3</span>
+                <span class="mr-3">Sass</span>
+                <span>Bootstrap</span>
+              </div>
+              <div>Tools</div>
+              <div>
+                <span class="mr-3">Visual Studio</span>
+                <span class="mr-3">GitHub</span>
+                <span class="mr-3">Docker</span>
+                <span class="mr-3">Heroku</span>
+                <span class="mr-3">Capistrano</span>
+                <span class="mr-3">InVision</span>
+                <span class="mr-3">Asana</span>
+                <span>Trello</span>
+              </div>
+            </div>
           </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="European Rugby"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/er-webpage.png" alt="European Rugby">
-            <div class="project-name">European<br/>Rugby</div>
-          </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="Gifter"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1553463196/shirleydeng/gifter-webpage.png" alt="Gifter">
-            <div class="project-name">Gifter</div>
-          </div>
-          <div class="project-webpage">
-            <a href="#" class="project-link" data-name="My Cineplace"></a>
-            <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1559410864/shirleydeng/my-cineplace-webpage.png" alt="MyCineplace">
-            <div class="project-name">My Cineplace</div>
-          </div>
+        </div>
+        <div class="work-heading">Past</div>
+        <div class="row">
+          <div class="col-sm-4 mb-3"><img class="project-link" data-name="AdPlan" src="images/adplan-rect.png"></div>
+          <div class="col-sm-4 mb-3"><img class="project-link" data-name="Endo" src="images/endo-rect.png"></div>
+          <div class="col-sm-4 mb-3"><img class="project-link" data-name="My Cineplace" src="images/cineplace-rect.png"></div>
+          <div class="col-sm-4 mb-3"><img class="project-link" data-name="European Rugby" src="images/epcr-rect.png"></div>
+          <div class="col-sm-4"><img class="project-link" data-name="Gifter" src="images/gifter-rect.png"></div>
         </div>
       </div>
       <div class="project-container d-none">
         <div class="row">
-          <div class="col-md-6 offset-md-3">
+          <div class="col-md-8 offset-md-2">
             <div class="project-close"><img src="images/back-arrow.png" width="20px"></div>
             <div class="project-title"></div>
             <div class="project-subheading"></div>
