[refactor] Reduce margin for 9-5 Work

--- a/work.html
+++ b/work.html
@@ -54,9 +54,9 @@
         <div class="work-heading mt-3">Been in the game for</div>
         <div class="counter-time"><span class='loading-text'>Wait for it..</span></div>
         <div class="row my-5">
-          <div class="col-md-6 mb-5">
+          <div class="col-md-6 experience">
             <div class="work-heading">9 to 5</div>
-            <div class="row experience">
+            <div class="row">
               <div class="col-3">
                 '19
               </div>
