[feature] Add new play pictures

--- a/play.html
+++ b/play.html
@@ -48,10 +48,18 @@
         <br/>
         If I'm not eating, I'm travelling.
         <br/>
-        <div class="location-text">Next up > South Korea + Japan</div>
+        <div class="location-text">Next up > Singapore + Sydney</div>
       </div>
       <hr class="pink-hr">
       <div class="row my-5">
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1581453104/shirleydeng/arashiyama.jpg">
+          <div class="location-text">Arashiyama, 2020</div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
+          <img src="https://res.cloudinary.com/devfclqwl/image/upload/v1581453107/shirleydeng/mt-fuji.jpg">
+          <div class="location-text">Mt. Fuji, 2020</div>
+        </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mb-5">
           <img src="https://res.cloudinary.com/devfclqwl/image/upload/a_exif/v1566417316/shirleydeng/sardinia.jpg">
           <div class="location-text">Sardinia, 2019</div>
