--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
             <div class="work-heading">9 to 5</div>
             <div class="row">
               <div class="col-3">
-                '19
+                '19 - Present
               </div>
               <div class="col-9 mb-3">
                 <a href="https://lavanda.co.uk" target="_blank">Lavanda</a>
