--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shirley Deng</title>
+    <title>Shirley Thompson</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -23,19 +23,19 @@
   <body>
     <div class="home-container">
       <div class="nav-bar">
-        <a href="/" class='logo'>SD.</a>
+        <a href="/" class='logo'>ST.</a>
         <div class="nav-bar-links-container">
           <a href="work" class="nav-bar-link">Work</a>
           <a href="play" class="nav-bar-link">Play</a>
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
-              <a href="https://www.linkedin.com/in/shirleyodeng/" target="_blank"><img src="images/linkedin-logo.png"></a>
+              <a href="https://www.linkedin.com/in/shirleyothompson/" target="_blank"><img src="images/linkedin-logo.png"></a>
               <a href="https://github.com/shirleyodeng/" target="_blank"><img src="images/github-logo.png"></a>
               <a href="https://www.instagram.com/__shirleythompson/" target="_blank"><img src="images/instagram-logo.png"></a>
             </div>
             <div class="mt-2">Or, say hello!</div>
-            <div class="mt-1"><a href="mailto:hello@shirleydeng.com"><img src="images/email.png"></a></div>
+            <div class="mt-1"><a href="mailto:shirleyodeng@gmail.com"><img src="images/email.png"></a></div>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
         <div class="mt-3">
           Hello, I'm <span class="text-pink">Shirley</span>.
           <br/>
-          I develop stuff at Lavanda.
+          I develop stuff at Progression.
           <br/>
           I am a product of Le Wagon.
           <div class="d-flex justify-content-center align-items-center">
