[feature] Update work

--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shirley Deng | Work</title>
+    <title>Shirley Thompson | Work</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="shortcut icon" type="image/png" href="images/favicon.png"/> -->
@@ -34,12 +34,12 @@
           <div class="links-container">
             <div>Go on, have a little stalk</div>
             <div class="mt-1">
-              <a href="https://www.linkedin.com/in/shirleyodeng/" target="_blank"><img src="images/linkedin-logo.png"></a>
+              <a href="https://www.linkedin.com/in/shirleyothompson/" target="_blank"><img src="images/linkedin-logo.png"></a>
               <a href="https://github.com/shirleyodeng/" target="_blank"><img src="images/github-logo.png"></a>
               <a href="https://www.instagram.com/__shirleythompson/" target="_blank"><img src="images/instagram-logo.png"></a>
             </div>
             <div class="mt-2">Or, say hello!</div>
-            <div class="mt-1"><a href="mailto:hello@shirleydeng.com"><img src="images/email.png"></a></div>
+            <div class="mt-1"><a href="mailto:shirleyodeng@gmail.com"><img src="images/email.png"></a></div>
           </div>
         </div>
       </div>
@@ -58,10 +58,21 @@
             <div class="work-heading">9 to 5</div>
             <div class="row">
               <div class="col-3">
-                '19 - Present
+                '22 - Present
               </div>
               <div class="col-9 mb-3">
-                <a href="https://lavanda.co.uk" target="_blank">Lavanda</a>
+                <a href="https://progressionapp.com" target="_blank">Progression</a>
+                <div class="description">Full Stack Developer</div>
+                <div class="stack">
+                  <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
+                  <img alt="React" src="images/react-icon.png">
+                </div>
+              </div>
+              <div class="col-3">
+                '19 - '22
+              </div>
+              <div class="col-9 mb-3">
+                <a href="https://getlavanda.com/" target="_blank">Lavanda</a>
                 <div class="description">Full Stack Developer</div>
                 <div class="stack">
                   <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
@@ -84,7 +95,7 @@
                 '18
               </div>
               <div class="col-9 mb-3">
-                <a href="https://www.fastgardener.com/" target="_blank">Fast Gardener</a>
+                <div>Fast Gardener</div>
                 <div class="description">Front End Developer</div>
                 <div class="stack">
                   <img alt="jQuery" src="images/jquery-icon.png">
@@ -94,7 +105,7 @@
                 '18
               </div>
               <div class="col-9">
-                  <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a>
+                <a href="https://www.lewagon.com/" target="_blank">Le Wagon</a>
                 <div class="description">Coding Bootcamp Graduate</div>
                 <div class="stack">
                   <img alt="Ruby on Rails" src="images/ruby-on-rails-icon.png">
