[feature] Update logo

--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@
     <img src="images/arrow.png" class='btt d-none'>
     <div class="nav-bar-container">
       <div class="nav-bar">
-        <a href="/" class='logo'>SD.</a>
+        <a href="/" class='logo'>ST.</a>
         <div class="nav-bar-links-container">
           <a href="work" class="nav-bar-link">> Work</a>
           <a href="play" class="nav-bar-link">Play</a>
